<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rdgOpcoes"
        android:layout_width="171dp"
        android:layout_height="139dp"
        android:layout_marginStart="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rdSomar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/somar" />

        <RadioButton
            android:id="@+id/rdSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtrair" />

        <RadioButton
            android:id="@+id/rdMulti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplica_o" />

        <RadioButton
            android:id="@+id/rdDiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divis_o" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="21dp"
        android:text="@string/op_es"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:text="@string/valor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor1" />

    <EditText
        android:id="@+id/txtValor1"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginStart="29dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtValor2"
        android:layout_width="321dp"
        android:layout_height="52dp"
        android:layout_marginStart="29dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnExecutar"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:onClick="calcValores"
        android:text="@string/executar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgOpcoes" />

</androidx.constraintlayout.widget.ConstraintLayout>